# ELEL329_image_inverter

./: CMakeLists.txt  README.md  package.xml
scripts/: image_inverter.py
